HW05 JDBC fix after review